chore: remove PNGs from repo, add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
-*.json
+# Python cache
 __pycache__/
-*.png
+*.py[cod]
+*.pyo
+
+# Virtual environments
+.venv/
+venv/
+env/
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+
+# Project-specific
+memory/portfolio_state.json
